--- a/app/src/main/res/layout/take_photo.xml
+++ b/app/src/main/res/layout/take_photo.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <org.opencv.android.JavaCamera2View
+        android:id="@+id/appcamview"
+        android:layout_width="640dp"
+        android:layout_height="480dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="67dp"
+        android:scaleX="0.75"
+        android:scaleY="1.5" />
+
     <ImageButton
         android:id="@+id/takePhoto"
         android:layout_width="85dp"
@@ -19,15 +30,6 @@
         android:scaleY="2"
         app:srcCompat="@android:drawable/ic_menu_camera"
         tools:ignore="ImageContrastCheck" />
-
-    <org.opencv.android.JavaCamera2View
-        android:id="@+id/appcamview"
-        android:layout_width="377dp"
-        android:layout_height="500dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="67dp" />
 
     <TextView
         android:id="@+id/textView"
