--- a/app/src/main/res/layout/take_photo.xml
+++ b/app/src/main/res/layout/take_photo.xml
@@ -6,16 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX="20000"
+        android:scaleY="20000"
+        app:srcCompat="@android:drawable/screen_background_dark" />
+
     <org.opencv.android.JavaCamera2View
         android:id="@+id/appcamview"
         android:layout_width="640dp"
         android:layout_height="480dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="67dp"
-        android:scaleX="0.75"
-        android:scaleY="1.5" />
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="80dp"
+        android:scaleX="0.9"
+        android:scaleY="1.95" />
 
     <ImageButton
         android:id="@+id/takePhoto"
