--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,25 +19,25 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/geo"
+        android:id="@+id/lat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="26dp"
         android:layout_marginTop="21dp"
-        android:text="TextView"
+        android:text="Latitude"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/geo2"
+        android:id="@+id/lng"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="26dp"
         android:layout_marginTop="50dp"
-        android:text="TextView"
+        android:text="Longitute"
         android:textSize="20sp" />
 
     <ScrollView
